# PyFxA

./: .coveragerc  .gitignore  .travis.yml  CHANGES.txt  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  jwks.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: test.yml
.github/workflows/: test.yml
fxa/: __init__.py  __main__.py  _utils.py  cache.py  constants.py  core.py  crypto.py  errors.py  oauth.py  profile.py  requests.py
fxa/plugins/: requests.py
fxa/tests/: __init__.py  bad-key.json  jwks.json  mock_utilities.py  private-key.json  test_cache.py  test_core.py  test_crypto.py  test_oauth.py  test_profile.py  test_requests_auth_plugin.py  test_tools.py  utils.py
fxa/tools/: bearer.py  browserid.py  create_user.py  fxa.py  unblock.py
