[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "pyfxa"
description = "Firefox Accounts client library for Python"
readme = "README.rst"
keywords = [
  "accounts",
  "authentication",
  "firefox",
]
license = "MPL-2.0"
authors = [
  { name = "Mozilla Services", email = "services-dev@mozilla.org" },
]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [ "version" ]
dependencies = [
  "cryptography",
  "hawkauthlib",
  "pybrowserid",
  "pyjwt",
  "requests>=2.4.2",
]

urls.Homepage = "https://github.com/mozilla/PyFxA"
scripts.fxa-client = "fxa.__main__:main"
entry-points."httpie.plugins.auth.v1".httpie_fxa-bearer = "fxa.plugins.requests:FxABearerTokenPlugin"
entry-points."httpie.plugins.auth.v1".httpie_fxa-browserid = "fxa.plugins.requests:FxABrowserIDPlugin"

[tool.hatch.version]
path = "fxa/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "fxa/",
  "CHANGES.txt",
  "CODE_OF_CONDUCT.md",
  "LICENSE.txt",
  "README.rst",
]

[tool.hatch.build.targets.wheel]
packages = [ "fxa" ]

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]>=6.5",
  "grequests",
  "parameterized",
  "pyotp",
  "pytest",
  "pytest-cov",
  "responses",
]
[tool.hatch.envs.test.scripts]
test = "pytest {args:fxa/tests}"
cov = "pytest --cov-config=pyproject.toml --cov=fxa/ --cov-report term-missing {args:fxa/tests}"

[[tool.hatch.envs.test.matrix]]
# Note: When changing these, also update the .github/workflows/test.yml file.
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.flake8]
max-line-length = 99
